--- a/environment.yml
+++ b/environment.yml
@@ -1,432 +1,176 @@
-name: tvm-python38
+name: tinyml
 channels:
-  - nvidia/label/cuda-11.8.0
   - conda-forge
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_gnu
-  - alsa-lib=1.2.13=hb9d3cd8_0
-  - attr=2.5.1=h166bdaf_1
-  - binutils_impl_linux-64=2.43=h4bf12b8_4
-  - binutils_linux-64=2.43=h4852527_4
   - bzip2=1.0.8=h4bc722e_7
-  - c-ares=1.34.4=hb9d3cd8_0
-  - ca-certificates=2025.1.31=hbcca054_0
-  - cached-property=1.5.2=hd8ed1ab_1
-  - cached_property=1.5.2=pyha770c72_1
-  - cmake=3.31.6=h74e3db0_0
-  - cuda-cccl_linux-64=12.8.90=ha770c72_1
-  - cuda-command-line-tools=12.8.1=ha770c72_0
-  - cuda-compiler=11.8.0=0
-  - cuda-crt-dev_linux-64=12.8.93=ha770c72_1
-  - cuda-crt-tools=12.8.93=ha770c72_1
-  - cuda-cudart=12.8.90=h5888daf_1
-  - cuda-cudart-dev=12.8.90=h5888daf_1
-  - cuda-cudart-dev_linux-64=12.8.90=h3f2d84a_1
-  - cuda-cudart-static=12.8.90=h5888daf_1
-  - cuda-cudart-static_linux-64=12.8.90=h3f2d84a_1
-  - cuda-cudart_linux-64=12.8.90=h3f2d84a_1
-  - cuda-cuobjdump=12.8.90=hbd13f7d_1
-  - cuda-cupti=12.8.90=hbd13f7d_0
-  - cuda-cupti-dev=12.8.90=h5888daf_0
-  - cuda-cuxxfilt=12.8.90=hbd13f7d_1
-  - cuda-documentation=11.8.86=0
-  - cuda-driver-dev=12.8.90=h5888daf_1
-  - cuda-driver-dev_linux-64=12.8.90=h3f2d84a_1
-  - cuda-gdb=12.8.90=h50b4baa_0
-  - cuda-libraries=12.8.1=ha770c72_0
-  - cuda-libraries-dev=12.8.1=ha770c72_0
-  - cuda-nsight=12.8.90=h7938cbb_1
-  - cuda-nvcc=11.8.89=0
-  - cuda-nvcc-dev_linux-64=12.8.93=he91c749_1
-  - cuda-nvcc-impl=12.8.93=h85509e4_1
-  - cuda-nvcc-tools=12.8.93=he02047a_1
-  - cuda-nvcc_linux-64=12.8.93=h04802cd_1
-  - cuda-nvdisasm=12.8.90=hbd13f7d_1
-  - cuda-nvml-dev=12.8.90=hbd13f7d_0
-  - cuda-nvprof=12.8.90=hbd13f7d_0
-  - cuda-nvprune=12.8.90=hbd13f7d_1
-  - cuda-nvrtc=12.8.93=h5888daf_1
-  - cuda-nvrtc-dev=12.8.93=h5888daf_1
-  - cuda-nvtx=12.8.90=hbd13f7d_0
-  - cuda-nvvm-dev_linux-64=12.8.93=ha770c72_1
-  - cuda-nvvm-impl=12.8.93=he02047a_1
-  - cuda-nvvm-tools=12.8.93=he02047a_1
-  - cuda-nvvp=12.8.93=hbd13f7d_1
-  - cuda-opencl=12.8.90=hbd13f7d_0
-  - cuda-opencl-dev=12.8.90=h5888daf_0
-  - cuda-profiler-api=12.8.90=h7938cbb_1
-  - cuda-sanitizer-api=12.8.93=hbd13f7d_1
-  - cuda-toolkit=11.8.0=0
-  - cuda-tools=12.8.1=ha770c72_0
-  - cuda-version=12.8=h5d125a7_3
-  - cuda-visual-tools=12.8.1=ha770c72_0
-  - cython=3.0.11=py38h6d02427_0
-  - dbus=1.13.6=h5008d03_3
-  - expat=2.6.4=h5888daf_0
-  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
-  - font-ttf-inconsolata=3.000=h77eed37_0
-  - font-ttf-source-code-pro=2.038=h77eed37_0
-  - font-ttf-ubuntu=0.83=h77eed37_3
-  - fontconfig=2.15.0=h7e30c49_1
-  - fonts-conda-ecosystem=1=0
-  - fonts-conda-forge=1=0
-  - freetype=2.13.3=h48d6fc4_0
-  - gcc_impl_linux-64=14.2.0=hdb7739f_2
-  - gcc_linux-64=14.2.0=h5910c8f_8
-  - gds-tools=1.13.1.3=h5888daf_0
-  - gmp=6.3.0=hac33072_2
-  - gxx_impl_linux-64=14.2.0=h2ead766_2
-  - gxx_linux-64=14.2.0=h9423afd_8
-  - h5py=3.11.0=nompi_py38h55b5aab_102
-  - hdf5=1.14.3=nompi_h2d575fe_109
-  - icu=75.1=he02047a_0
-  - kernel-headers_linux-64=3.10.0=he073ed8_18
-  - keyutils=1.6.1=h166bdaf_0
-  - krb5=1.21.3=h659f571_0
-  - ld_impl_linux-64=2.43=h712a8e2_4
-  - libaec=1.1.3=h59595ed_0
-  - libblas=3.9.0=31_h59b9bed_openblas
-  - libcap=2.75=h39aace5_0
-  - libcblas=3.9.0=31_he106b2a_openblas
-  - libcublas=12.8.4.1=h9ab20c4_1
-  - libcublas-dev=12.8.4.1=h9ab20c4_1
-  - libcufft=11.3.3.83=h5888daf_1
-  - libcufft-dev=11.3.3.83=h5888daf_1
-  - libcufile=1.13.1.3=h12f29b5_0
-  - libcufile-dev=1.13.1.3=h5888daf_0
-  - libcurand=10.3.9.90=h9ab20c4_1
-  - libcurand-dev=10.3.9.90=h9ab20c4_1
-  - libcurl=8.12.1=h332b0f4_0
-  - libcusolver=11.7.3.90=h9ab20c4_1
-  - libcusolver-dev=11.7.3.90=h9ab20c4_1
-  - libcusparse=12.5.8.93=hbd13f7d_0
-  - libcusparse-dev=12.5.8.93=h5888daf_0
-  - libedit=3.1.20250104=pl5321h7949ede_0
-  - libev=4.33=hd590300_2
-  - libexpat=2.6.4=h5888daf_0
-  - libffi=3.4.6=h2dba641_0
-  - libgcc=14.2.0=h767d61c_2
-  - libgcc-devel_linux-64=14.2.0=h9c4974d_102
-  - libgcc-ng=14.2.0=h69a702a_2
-  - libgcrypt-lib=1.11.0=hb9d3cd8_2
-  - libgfortran=14.2.0=h69a702a_2
-  - libgfortran5=14.2.0=hf1ad2bd_2
-  - libglib=2.82.2=h2ff4ddf_1
-  - libglvnd=1.7.0=ha4b6fd6_2
-  - libgomp=14.2.0=h767d61c_2
-  - libgpg-error=1.51=hbd13f7d_1
-  - libiconv=1.18=h4ce23a2_1
-  - liblapack=3.9.0=31_h7ac8fdf_openblas
-  - libllvm15=15.0.7=ha7bfdaf_5
-  - liblzma=5.6.4=hb9d3cd8_0
-  - liblzma-devel=5.6.4=hb9d3cd8_0
-  - libnghttp2=1.64.0=h161d5f1_0
-  - libnl=3.11.0=hb9d3cd8_0
-  - libnpp=12.3.3.100=h9ab20c4_1
-  - libnpp-dev=12.3.3.100=h9ab20c4_1
-  - libnsl=2.0.1=hd590300_0
-  - libnuma=2.0.18=h4ab18f5_2
-  - libnvfatbin=12.8.90=hbd13f7d_0
-  - libnvfatbin-dev=12.8.90=h5888daf_0
-  - libnvjitlink=12.8.93=h5888daf_1
-  - libnvjitlink-dev=12.8.93=h5888daf_1
-  - libnvjpeg=12.3.5.92=h97fd463_0
-  - libnvjpeg-dev=12.3.5.92=ha770c72_0
-  - libopenblas=0.3.29=pthreads_h94d23a6_0
-  - libopengl=1.7.0=ha4b6fd6_2
-  - libpng=1.6.47=h943b412_0
-  - libsanitizer=14.2.0=hed042b8_2
-  - libsqlite=3.49.1=hee588c1_2
-  - libssh2=1.11.1=hf672d98_0
-  - libstdcxx=14.2.0=h8f9b012_2
-  - libstdcxx-devel_linux-64=14.2.0=h9c4974d_102
-  - libstdcxx-ng=14.2.0=h4852527_2
-  - libsystemd0=257.4=h4e0b6ca_1
-  - libudev1=257.4=hbe16f8c_1
+  - ca-certificates=2025.6.15=hbd8a1cb_0
+  - ld_impl_linux-64=2.44=h1423503_0
+  - libexpat=2.7.0=h5888daf_0
+  - libffi=3.4.6=h2dba641_1
+  - libgcc=15.1.0=h767d61c_3
+  - libgcc-ng=15.1.0=h69a702a_3
+  - libgomp=15.1.0=h767d61c_3
+  - liblzma=5.8.1=hb9d3cd8_2
+  - libmpdec=4.0.0=hb9d3cd8_0
+  - libsqlite=3.50.2=h6cd9bfd_0
   - libuuid=2.38.1=h0b41bf4_0
-  - libuv=1.50.0=hb9d3cd8_0
-  - libxcb=1.17.0=h8a09558_0
-  - libxcrypt=4.4.36=hd590300_1
-  - libxkbcommon=1.8.1=hc4a0caf_0
-  - libxkbfile=1.1.0=h166bdaf_1
-  - libxml2=2.13.6=h8d12d68_0
   - libzlib=1.3.1=hb9d3cd8_2
-  - llvm-tools=15.0.7=ha7bfdaf_5
-  - llvmdev=15.0.7=ha7bfdaf_5
-  - lz4-c=1.10.0=h5888daf_1
   - ncurses=6.5=h2d0b736_3
-  - nsight-compute=2025.1.1.2=hb5ebaad_0
-  - nspr=4.36=h5888daf_0
-  - nss=3.108=h159eef7_0
-  - ocl-icd=2.3.2=hb9d3cd8_2
-  - opencl-headers=2024.10.24=h5888daf_0
-  - openssl=3.4.1=h7b32b05_0
-  - pcre2=10.44=hba22ea6_2
-  - pip=24.3.1=pyh8b19718_0
-  - pkg-config=0.29.2=h4bc722e_1009
-  - pkgconfig=1.5.5=pyhd8ed1ab_4
-  - pthread-stubs=0.4=hb9d3cd8_1002
-  - python=3.8.20=h4a871b0_2_cpython
-  - python_abi=3.8=5_cp38
-  - rdma-core=56.0=h5888daf_0
+  - openssl=3.5.1=h7b32b05_0
+  - pip=25.1.1=pyh145f28c_0
+  - python=3.13.5=hec9711d_102_cp313
+  - python_abi=3.13=7_cp313
   - readline=8.2=h8c095d6_2
-  - rhash=1.4.5=hb9d3cd8_0
-  - setuptools=75.3.0=pyhd8ed1ab_0
-  - sysroot_linux-64=2.17=h0157908_18
-  - tk=8.6.13=noxft_h4845f30_101
-  - wayland=1.23.1=h3e06ad9_0
-  - wheel=0.45.1=pyhd8ed1ab_0
-  - xcb-util=0.4.1=hb711507_2
-  - xcb-util-cursor=0.1.5=hb9d3cd8_0
-  - xcb-util-image=0.4.0=hb711507_2
-  - xcb-util-keysyms=0.4.1=hb711507_0
-  - xcb-util-renderutil=0.3.10=hb711507_0
-  - xcb-util-wm=0.4.2=hb711507_0
-  - xkeyboard-config=2.43=hb9d3cd8_0
-  - xorg-libice=1.1.2=hb9d3cd8_0
-  - xorg-libsm=1.2.6=he73a12e_0
-  - xorg-libx11=1.8.12=h4f16b4b_0
-  - xorg-libxau=1.0.12=hb9d3cd8_0
-  - xorg-libxcomposite=0.4.6=hb9d3cd8_2
-  - xorg-libxdamage=1.1.6=hb9d3cd8_0
-  - xorg-libxdmcp=1.1.5=hb9d3cd8_0
-  - xorg-libxext=1.3.6=hb9d3cd8_0
-  - xorg-libxfixes=6.0.1=hb9d3cd8_0
-  - xorg-libxi=1.8.2=hb9d3cd8_0
-  - xorg-libxrandr=1.5.4=hb9d3cd8_0
-  - xorg-libxrender=0.9.12=hb9d3cd8_0
-  - xorg-libxtst=1.2.5=hb9d3cd8_3
-  - xz=5.6.4=hbcc6ac9_0
-  - xz-gpl-tools=5.6.4=hbcc6ac9_0
-  - xz-tools=5.6.4=hb9d3cd8_0
-  - zlib=1.3.1=hb9d3cd8_2
-  - zstd=1.5.7=hb8e6e7a_2
+  - tk=8.6.13=noxft_hd72426e_102
   - pip:
-      - absl-py==2.2.1
-      - aiohappyeyeballs==2.4.4
-      - aiohttp==3.10.11
-      - aiosignal==1.3.1
-      - aliyun-python-sdk-core==2.16.0
-      - aliyun-python-sdk-kms==2.16.5
-      - antlr4-python3-runtime==4.9.3
-      - anyio==4.5.2
-      - argon2-cffi==23.1.0
+      - anyio==4.9.0
+      - argon2-cffi==25.1.0
       - argon2-cffi-bindings==21.2.0
       - arrow==1.3.0
       - asttokens==3.0.0
-      - astunparse==1.6.3
-      - async-lru==2.0.4
-      - async-timeout==5.0.1
+      - async-lru==2.0.5
       - attrs==25.3.0
-      - audioread==3.0.1
       - babel==2.17.0
-      - backcall==0.2.0
-      - beautifulsoup4==4.13.3
-      - bleach==6.1.0
-      - cachetools==5.5.2
-      - certifi==2025.1.31
+      - beautifulsoup4==4.13.4
+      - bleach==6.2.0
+      - bs4==0.0.2
+      - certifi==2025.6.15
       - cffi==1.17.1
-      - charset-normalizer==3.4.1
-      - cloudpickle==3.1.1
+      - charset-normalizer==3.4.2
       - coloredlogs==15.0.1
       - comm==0.2.2
-      - contourpy==1.1.1
-      - crcmod==1.7
-      - cryptography==44.0.3
+      - contourpy==1.3.2
       - cycler==0.12.1
-      - datasets==3.1.0
-      - debugpy==1.8.13
-      - decorator==4.4.2
+      - dataset-builder-inat==1.0.5
+      - debugpy==1.8.14
+      - decorator==5.2.1
       - defusedxml==0.7.1
-      - dill==0.3.8
-      - editdistance==0.8.1
-      - evaluate==0.4.3
-      - exceptiongroup==1.2.2
       - executing==2.2.0
       - fastjsonschema==2.21.1
-      - filelock==3.16.1
+      - filelock==3.18.0
       - flatbuffers==25.2.10
-      - fonttools==4.56.0
+      - fonttools==4.58.5
       - fqdn==1.5.1
-      - frozenlist==1.5.0
-      - fsspec==2023.10.0
-      - funasr==1.2.6
-      - gast==0.4.0
-      - gdown==5.2.0
-      - google-auth==2.38.0
-      - google-auth-oauthlib==1.0.0
-      - google-pasta==0.2.0
-      - graphviz==0.19.1
-      - grpcio==1.70.0
-      - h11==0.14.0
-      - httpcore==1.0.7
+      - fsspec==2025.5.1
+      - h11==0.16.0
+      - httpcore==1.0.9
       - httpx==0.28.1
-      - huggingface-hub==0.29.3
       - humanfriendly==10.0
-      - hydra-core==1.3.2
       - idna==3.10
       - ipykernel==6.29.5
-      - ipython==8.12.3
-      - ipywidgets==8.1.5
+      - ipython==9.4.0
+      - ipython-pygments-lexers==1.1.1
+      - ipywidgets==8.1.7
       - isoduration==20.11.0
-      - jaconv==0.4.0
-      - jamo==0.4.1
       - jedi==0.19.2
-      - jieba==0.42.1
       - jinja2==3.1.6
-      - jmespath==0.10.0
-      - joblib==1.4.2
-      - json5==0.10.0
+      - joblib==1.5.1
+      - json5==0.12.0
       - jsonpointer==3.0.0
-      - jsonschema==4.23.0
-      - jsonschema-specifications==2023.12.1
+      - jsonschema==4.24.0
+      - jsonschema-specifications==2025.4.1
       - jupyter==1.1.1
       - jupyter-client==8.6.3
       - jupyter-console==6.6.3
-      - jupyter-core==5.7.2
-      - jupyter-events==0.10.0
+      - jupyter-core==5.8.1
+      - jupyter-events==0.12.0
       - jupyter-lsp==2.2.5
-      - jupyter-server==2.14.2
+      - jupyter-server==2.16.0
       - jupyter-server-terminals==0.5.3
-      - jupyterlab==4.3.6
+      - jupyterlab==4.4.4
       - jupyterlab-pygments==0.3.0
       - jupyterlab-server==2.27.3
-      - jupyterlab-widgets==3.0.13
-      - kaldiio==2.18.1
-      - keras==2.13.1
-      - kiwisolver==1.4.7
-      - lazy-loader==0.4
-      - libclang==18.1.1
-      - librosa==0.11.0
-      - llvmlite==0.41.1
-      - markdown==3.7
-      - markupsafe==2.1.5
-      - matplotlib==3.5.3
+      - jupyterlab-widgets==3.0.15
+      - kiwisolver==1.4.8
+      - markupsafe==3.0.2
+      - matplotlib==3.10.3
       - matplotlib-inline==0.1.7
+      - matplotlib-venn==1.1.2
       - mistune==3.1.3
-      - ml-dtypes==0.2.0
-      - modelscope==1.25.0
       - mpmath==1.3.0
-      - msgpack==1.1.0
-      - multidict==6.1.0
-      - multiprocess==0.70.16
-      - nbclient==0.10.1
+      - nbclient==0.10.2
       - nbconvert==7.16.6
       - nbformat==5.10.4
       - nest-asyncio==1.6.0
-      - networkx==2.5.1
-      - ninja==1.11.1.4
-      - notebook==7.3.3
+      - networkx==3.5
+      - notebook==7.4.4
       - notebook-shim==0.2.4
-      - numba==0.58.1
-      - numpy==1.24.2
-      - nvidia-cublas-cu12==12.4.2.65
-      - nvidia-cuda-cupti-cu12==12.4.99
-      - nvidia-cuda-nvrtc-cu12==12.4.99
-      - nvidia-cuda-runtime-cu12==12.4.99
-      - nvidia-cudnn-cu12==9.1.0.70
-      - nvidia-cufft-cu12==11.2.0.44
-      - nvidia-curand-cu12==10.3.5.119
-      - nvidia-cusolver-cu12==11.6.0.99
-      - nvidia-cusparse-cu12==12.3.0.142
-      - nvidia-nccl-cu12==2.20.5
-      - nvidia-nvjitlink-cu12==12.4.99
-      - nvidia-nvtx-cu12==12.4.99
-      - oauthlib==3.2.2
-      - omegaconf==2.3.0
-      - onnx==1.17.0
-      - onnxruntime==1.19.2
-      - opt-einsum==3.4.0
-      - oss2==2.19.1
+      - numpy==2.2.6
+      - nvidia-cublas-cu12==12.6.4.1
+      - nvidia-cuda-cupti-cu12==12.6.80
+      - nvidia-cuda-nvrtc-cu12==12.6.77
+      - nvidia-cuda-runtime-cu12==12.6.77
+      - nvidia-cudnn-cu12==9.5.1.17
+      - nvidia-cufft-cu12==11.3.0.4
+      - nvidia-cufile-cu12==1.11.1.6
+      - nvidia-curand-cu12==10.3.7.77
+      - nvidia-cusolver-cu12==11.7.1.2
+      - nvidia-cusparse-cu12==12.5.4.2
+      - nvidia-cusparselt-cu12==0.6.3
+      - nvidia-nccl-cu12==2.26.2
+      - nvidia-nvjitlink-cu12==12.6.85
+      - nvidia-nvtx-cu12==12.6.77
+      - onnx==1.18.0
+      - onnxruntime==1.22.0
+      - onnxruntime-gpu==1.22.0
+      - opencv-python==4.12.0.88
       - overrides==7.7.0
-      - pandas==2.0.3
+      - packaging==25.0
+      - pandas==2.3.0
       - pandocfilters==1.5.1
       - parso==0.8.4
       - pexpect==4.9.0
-      - pickleshare==0.7.5
-      - pillow==10.2.0
-      - pkgutil-resolve-name==1.3.10
-      - pooch==1.8.2
-      - prometheus-client==0.21.1
-      - prompt-toolkit==3.0.50
-      - propcache==0.2.0
-      - protobuf==4.25.6
+      - pillow==11.3.0
+      - platformdirs==4.3.8
+      - prometheus-client==0.22.1
+      - prompt-toolkit==3.0.51
+      - protobuf==6.31.1
       - psutil==7.0.0
       - ptyprocess==0.7.0
       - pure-eval==0.2.3
-      - pyarrow==17.0.0
-      - pyasn1==0.6.1
-      - pyasn1-modules==0.4.2
+      - pyarrow==20.0.0
       - pycparser==2.22
-      - pycryptodome==3.22.0
-      - pydot==1.4.1
-      - pygments==2.19.1
-      - pynndescent==0.5.13
-      - pyparsing==2.4.7
-      - pysocks==1.7.1
+      - pygments==2.19.2
+      - pyparsing==3.2.3
       - python-dateutil==2.9.0.post0
       - python-json-logger==3.3.0
-      - pytorch-nndct==3.5.0
-      - pytorch-wpe==0.0.1
       - pytz==2025.2
-      - pyxir==0.3.5
-      - pyyaml==6.0
-      - pyzmq==26.3.0
-      - referencing==0.35.1
-      - regex==2024.11.6
-      - requests==2.32.3
-      - requests-oauthlib==2.0.0
+      - pyyaml==6.0.2
+      - pyzmq==27.0.0
+      - referencing==0.36.2
+      - requests==2.32.4
       - rfc3339-validator==0.1.4
       - rfc3986-validator==0.1.1
-      - rpds-py==0.20.1
-      - rsa==4.9
-      - safetensors==0.5.3
-      - scikit-learn==1.3.2
-      - scipy==1.9.3
+      - rpds-py==0.26.0
+      - scikit-learn==1.7.0
+      - scipy==1.16.0
+      - seaborn==0.13.2
       - send2trash==1.8.3
-      - sentencepiece==0.2.0
+      - setuptools==80.9.0
       - six==1.17.0
       - sniffio==1.3.1
-      - soundfile==0.13.1
-      - soupsieve==2.6
-      - soxr==0.3.7
+      - soupsieve==2.7
       - stack-data==0.6.3
-      - sympy==1.13.3
-      - tabulate==0.8.9
-      - tensorboard==2.13.0
-      - tensorboard-data-server==0.7.2
-      - tensorboardx==2.6.2.2
-      - tensorflow==2.13.1
-      - tensorflow-estimator==2.13.0
-      - tensorflow-io-gcs-filesystem==0.34.0
-      - termcolor==2.4.0
+      - sympy==1.14.0
       - terminado==0.18.1
-      - threadpoolctl==3.5.0
-      - tinycss2==1.2.1
-      - tokenizers==0.20.3
-      - torch==2.4.1+cu124
-      - torch-complex==0.4.4
-      - torchaudio==2.4.1+cu124
+      - threadpoolctl==3.6.0
+      - tinycss2==1.4.0
+      - torch==2.7.1
       - torchsummary==1.5.1
-      - torchvision==0.19.1+cu124
-      - tornado==6.4.2
+      - torchvision==0.22.1
+      - tornado==6.5.1
       - tqdm==4.67.1
       - traitlets==5.14.3
-      - transformers==4.46.3
-      - triton==3.0.0
-      - types-python-dateutil==2.9.0.20241206
-      - typing-extensions==4.5.0
+      - triton==3.3.1
+      - types-python-dateutil==2.9.0.20250708
+      - typing-extensions==4.14.1
       - tzdata==2025.2
-      - umap-learn==0.5.7
       - uri-template==1.3.0
-      - urllib3==2.2.3
+      - urllib3==2.5.0
       - wcwidth==0.2.13
-      - webcolors==24.8.0
+      - webcolors==24.11.1
       - webencodings==0.5.1
       - websocket-client==1.8.0
-      - werkzeug==3.0.6
-      - widgetsnbextension==4.0.13
-      - wrapt==1.17.2
-      - xxhash==3.5.0
-      - yarl==1.15.2
+      - widgetsnbextension==4.0.14
