--- a/environment.yml
+++ b/environment.yml
@@ -54,6 +54,7 @@ dependencies:
       - fonttools==4.58.5
       - fqdn==1.5.1
       - fsspec==2025.5.1
+      - gdown==5.2.0
       - h11==0.16.0
       - httpcore==1.0.9
       - httpx==0.28.1
@@ -134,6 +135,7 @@ dependencies:
       - pycparser==2.22
       - pygments==2.19.2
       - pyparsing==3.2.3
+      - pysocks==1.7.1
       - python-dateutil==2.9.0.post0
       - python-json-logger==3.3.0
       - pytz==2025.2
